# DynamicPATCH

./: LICENSE  README.md  pyproject.toml
dynamicpatch/: TransitionAnalysis.py  WriteData.py  __init__.py  config.py  create_charts.py  create_maps.py  interface.py  main.py  processing.py  read_data.py  test.py
dynamicpatch/static/: example.xlsx
exampledata/: example_data.txt
tests/: example_data.py  paper_graphs.py  test-command.py  test-interface.py
