[tool.poetry]
name = "DynamicPATCH"
version = "0.1.1"
description = "Python package DynamicPATCH"
authors = ["Aiyin Zhang"]
license = "MIT"
readme = "README.md"

include = [
    { path = "dynamicpatch/static" }
]

[tool.poetry.dependencies]
python = "^3.10"
GDAL = "^3.3.2"
numpy = ">=1.21.3,<2.0.0"
pandas = "^2.2.2"
matplotlib-scalebar = "^0.8.1"
matplotlib = "^3.9.2"
opencv-python = "^4.5.3"
scikit-image = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
